# quant-choice-

./: .gitignore  README.md
quant/EmQuantAPI/: EmQuantAPI.h
quant/src/: CMakeLists.txt  asyn_handle.cpp  asyn_handle.h  csc_handle.cpp  csc_handle.h  csq_handle.cpp  csq_handle.h  csq_info.cpp  csq_info.h  csqshot_handle.cpp  csqshot_handle.h  css_handle.cpp  css_handle.h  css_info.cpp  css_info.h  cst_handle.cpp  cst_handle.h  ctr_handle.cpp  ctr_handle.h  day_line.cpp  day_line.h  election.h  hold.cpp  hold.h  indic_info.h  indictor_info.cpp  indictor_info.h  indictors.h  kafka_client.cpp  kafka_client.h  kafka_consumer.cpp  kafka_consumer.h  kafka_producer.cpp  kafka_producer.h  login.h  main.cpp  message_queue.h  quant_code.cpp  quant_code.h  quant_kafka.h  (+22 more)
quant/src/nbproject/: Makefile-Debug.mk  Makefile-Debugx64.mk  Makefile-Release.mk  Makefile-Releasex64.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Debugx64.bash  Package-Release.bash  Package-Releasex64.bash  configurations.xml  project.xml
quant/src/nbproject/private/: Makefile-variables.mk  configurations.xml  private.xml  timestamps-192.168.10.128-richard-22  timestamps-192.168.10.130-richard-22  timestamps-192.168.238.128-richard-22  timestamps-192.168.238.129-richard-22  timestamps-192.168.238.130-richard-22
